--- a/src/input.css
+++ b/src/input.css
@@ -1016,8 +1016,17 @@
         @apply break-all;
     }
 
+    /* #### BIBLE TIMELINE #### */
+    .cs-box-timeline-number {
+        @apply  w-14 pt-4 font-bold cs-fs-lg;
+    }
 
-    /* #### GRADIENT TEXT #### */
+    .cs-box-timeline-description {
+        @apply flex flex-col  items-start pt-4 flex-grow pb-2;
+    }
+
+
+        /* #### GRADIENT TEXT #### */
     .cs-gradient-text {
         background: linear-gradient(to bottom, #FA4238 0%, #C80000 30%, #881A21 66%, #570208 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;
     }
