--- a/src/input.css
+++ b/src/input.css
@@ -1029,6 +1029,11 @@
         @apply w-0.5 h-full;
     }
 
+    .cs-box-timeline-chip {
+        @apply uppercase ml-3 mt-2 font-normal tracking-normal
+        flex flex-row items-center px-2 pt-0.5 font-sans border border-transparent rounded-xl cs-fs-badge;
+    }
+
 
         /* #### GRADIENT TEXT #### */
     .cs-gradient-text {
