--- a/src/input.css
+++ b/src/input.css
@@ -55,6 +55,10 @@
     .cs-fs-5xl {
         @apply text-7xl sm:text-7xl
     }
+
+    .cs-fs-highly-recommended {
+        @apply text-xs xsm:text-base md:text-[1.25rem]
+    }
 }
 
 @layer components {
@@ -1001,7 +1005,7 @@
 
     /* #### ASCENSION PRESS #### */
     .cs-ascension-recommended {
-        @apply uppercase text-cs-grey border-[3px] pr-4 border-cs-blue-main rounded-3xl flex flex-row items-center gap-2 cs-fs-2xs xsm:cs-fs-xs md:cs-fs-base;
+        @apply uppercase text-cs-grey border-[3px] pr-4 border-cs-blue-main rounded-3xl flex flex-row items-center gap-2 cs-fs-highly-recommended;
     }
 
     .cs-ascension-box {
